updating portfolio page

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
       <div id="connect">
         <h2>Connect with Me</h2>
         <a href="https://github.com/nagaseri"><img src="images/github.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/eri-n-082b0a106/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.linkedin.com/in/erinagase/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/8113065/nagaseri?tab=profile"><img src="images/stack.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
