--- a/portfolio.html
+++ b/portfolio.html
@@ -23,31 +23,31 @@
     <section class="main-section">
       <h1>Portfolio</h1>
       <div class="work">
-        <img src="images/cat.jpeg" alt="hangman">
-        <h3>Hangman</h3>
+        <img src="images/friend_finder.png" alt="hangman" href="https://github.com/nagaseri/friend_finder">
+        <h3>Superhero Friend Finder</h3>
       </div>
       <div class="work">
-        <img src="images/dog.jpeg" alt="RPG Game">
-        <h3>RPG Game</h3>
+        <img src="images/vroom_me.png" alt="RPG Game" href="https://github.com/nagaseri/vroomMe">
+        <h3>VroomMe</h3>
       </div>
       <div class="work">
-        <img src="images/sassycat.jpeg" alt="Trivia Game">
-        <h3>Trivia Game</h3>
+        <img src="images/HotRestaurant.png" alt="Hot Restaurant" href="https://github.com/nagaseri/hot_restaurant">
+        <h3>Hot Restaurant</h3>
       </div>
       <div class="work">
-        <img src="images/smalldog.jpeg" alt="Rutgers Info Widget">
-        <h3>Rutgers Info Widget</h3>
+        <img src="images/bamazon.png" alt="Rutgers Info Widget" href="https://github.com/nagaseri/bamazon">
+        <h3>Bamazon</h3>
       </div>
       <div class="work">
-        <img src="images/horse.jpeg" alt="Rock Paper Scissors">
-        <h3>Rock Paper Scissors</h3>
+        <img src="images/PUG.png" alt="Rock Paper Scissors" href="https://github.com/pnavo/Pickup-Games">
+        <h3>PUGs</h3>
       </div>
     </section>
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
         <a href="https://github.com/nagaseri"><img src="images/github.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/eri-n-082b0a106/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.linkedin.com/in/erinagase/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/8113065/nagaseri?tab=profile"><img src="images/stack.png" class="social" alt="Stack Overflow" /></a>
     </section>
   </div>
