--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <section class="main-section">
       <h1>About Me</h1>
       <img src="logo.jpg" class="auth-image" alt="Eri Nagase">
-      <p>Hello! My name is Eri and I am a Japan born, Hawaii raised, UC Berkeley grad. I absolutely love to travel, meet new people, eat all the food that the world has to offer, and dance! Although I have my BA in Psychology, I am now pursuing a career change and going into Web Development.</p>
-      <p> I fell into this field because I was looking for a job where I could work remotely so that I could continue traveling. I happened upon coding and found a genuine sense of excitement when I was dabbling in it. I hope to become an expert web developer by the end of the program. </p>
+      <p>Hello, I'm Eri, a modern day renaissance woman expanding my knowledge by traversing the world one city at a time. I am currently a Javascript full stack web developer passionate about building meaningful projects and creating bridges between various groups. I am a very curious person by nature, having studied five languages, traveled to 20+ countries, and tackled new challenges like switching fields from psychology to coding. </p>
+      <p>Learning new skills, taking on new projects, and engineering systems is my passion, so the ever evolving world of coding has brought me immense excitement and fulfillment. I also bring my psychology background to teams to create a harmonious and effective environment. Hope to meet you soon! :) </p>
     </section>
     <section class="sidebar">
       <div id="connect">
         <h2>Connect with Me</h2>
         <a href="https://github.com/nagaseri"><img src="images/github.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/eri-n-082b0a106/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.linkedin.com/in/erinagase/"><img src="images/linkedin.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/8113065/nagaseri?tab=profile"><img src="images/stack.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
